# Audio

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: Define.h  Effect.hpp  WAVParser.h
lib/src/: WAVParser.cpp
